set custom icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/thinkchem-lk-icon.png" />
 
     <meta property="og:title" content="ThinkChem | Advanced Chemistry Education Sri Lanka" />
     <meta property="og:description" content="ThinkChem - Expert chemistry education for advanced level students in Sri Lanka. Comprehensive courses designed for A-Level success." />
